--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ MAILER_USERNAME=workshoply@gmail.com
 MAILER_PASSWORD=work$hoply
 SENDGRID_USERNAME=app55599616@heroku.com
 SENDGRID_PASSWORD=9oy86lvo4909
+S3_BUCKET_NAME=bigtalker
+AWS_PUBLIC_KEY_ID=AKIAJJY6HEVM7TNDDALA
+AWS_SECRET_ACCESS_KEY=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
+AWS_REGION=us-west-1
